--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <nav class="hidden md:flex space-x-6 items-center">
                     <a href="/#" class="nav-link">Inicio</a>
                     <a href="#especialistas" class="nav-link">Especialistas</a>
-                    <a href="services.html" class="nav-link">Servicios</a>
+                    <a href="/services" class="nav-link">Servicios</a>
                     <a href="about-us.html" class="nav-link">Sobre nosotros</a>
                     <a href="contacto.html" class="nav-link">Contacto</a>
                     <a href=""
