--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <nav class="hidden md:flex space-x-6 items-center">
                     <a href="/#" class="nav-link">Inicio</a>
                     <a href="#especialistas" class="nav-link">Especialistas</a>
-                    <a href="/services" class="nav-link">Servicios</a>
-                    <a href="about-us.html" class="nav-link">Sobre nosotros</a>
-                    <a href="contacto.html" class="nav-link">Contacto</a>
+                    <a href="/services.html" class="nav-link">Servicios</a>
+                    <a href="/about-us.html" class="nav-link">Sobre nosotros</a>
+                    <a href="/contacto.html" class="nav-link">Contacto</a>
                     <a href=""
                         class="bg-green-600 hover:bg-green-700 text-white text-sm font-semibold rounded-full px-4 py-2 transition">
                         Agenda tu cita
