--- a/audiologia.html
+++ b/audiologia.html
@@ -20,13 +20,13 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-20">
           <!-- Logo -->
-          <a href="/" class="flex-shrink-0">
+          <a href="/cmeo-web" class="flex-shrink-0">
             <img src="assets/logo.png" alt="Logo" class="h-[4rem] w-auto" />
           </a>
 
           <!-- Menú Desktop -->
           <nav class="hidden md:flex space-x-6 items-center">
-            <a href="/#" class="nav-link">Inicio</a>
+            <a href="/cmeo-web" class="nav-link">Inicio</a>
             <a href="#especialistas" class="nav-link">Especialistas</a>
             <a href="/cmeo-web/services.html" class="nav-link">Servicios</a>
             <a href="/cmeo-web/about-us.html" class="nav-link"
