--- a/about-us.html
+++ b/about-us.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CMEO - Especialistas</title>
-    <link rel="icon" type="image/png" href="/assets/favicon.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <link rel="stylesheet" href="styles.css" />
     <!-- Google Fonts: Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-
-</head>
-
-<body>
-
-        <header class="bg-white shadow-md fixed top-0 w-full z-50">
+  <body>
+    <header class="bg-white shadow-md fixed top-0 w-full z-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-20">
           <!-- Logo -->
-          <a href="/" class="flex-shrink-0">
+          <a href="/cmeo-web" class="flex-shrink-0">
             <img src="assets/logo.png" alt="Logo" class="h-[4rem] w-auto" />
           </a>
 
           <!-- Menú Desktop -->
           <nav class="hidden md:flex space-x-6 items-center">
-            <a href="/#" class="nav-link">Inicio</a>
+            <a href="/cmeo-web" class="nav-link">Inicio</a>
             <a href="#especialistas" class="nav-link">Especialistas</a>
             <a href="/cmeo-web/services.html" class="nav-link">Servicios</a>
             <a href="/cmeo-web/about-us.html" class="nav-link"
@@ -150,64 +149,91 @@
 
     <!-- Imagen de fondo con slider -->
     <section class="relative w-full h-[70vh]">
-        <div class="absolute inset-0 z-0">
-            <img src="assets/slider-us.jpg" alt="Sobre nosotros" class="w-full h-full object-cover" />
-            <div class="absolute inset-0 bg-black/40"></div> <!-- Overlay -->
-        </div>
+      <div class="absolute inset-0 z-0">
+        <img
+          src="assets/slider-us.jpg"
+          alt="Sobre nosotros"
+          class="w-full h-full object-cover"
+        />
+        <div class="absolute inset-0 bg-black/40"></div>
+        <!-- Overlay -->
+      </div>
 
-        <!-- Título central flotante -->
-        <div class="relative z-10 flex justify-center items-end h-full pb-10">
-            <div class="bg-[#1f1f1f] text-white text-2xl md:text-3xl font-semibold px-10 py-4 rounded-xl shadow-xl">
-                SOBRE NOSOTROS
-            </div>
+      <!-- Título central flotante -->
+      <div class="relative z-10 flex justify-center items-end h-full pb-10">
+        <div
+          class="bg-[#1f1f1f] text-white text-2xl md:text-3xl font-semibold px-10 py-4 rounded-xl shadow-xl"
+        >
+          SOBRE NOSOTROS
         </div>
+      </div>
     </section>
 
     <!-- Contenido principal -->
     <section class="bg-white py-16 px-6">
-        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-            <!-- Texto -->
-            <div>
-                <h3 class="text-2xl font-bold text-gray-800 mb-4">¿Quiénes somos?</h3>
-                <p class="text-gray-600 leading-relaxed mb-4">
-                    Somos un grupo de médicos y especialistas en oftalmología, otorrinolaringología y audiología con un
-                    enfoque en el cuidado y tratamiento de las diferentes patologías que afectan los órganos de los
-                    sentidos.
-                </p>
-                <p class="text-gray-600 leading-relaxed mb-4">
-                    Buscamos garantizar a todos nuestros pacientes la integralidad y continuidad en la atención, con un
-                    enfoque humano, seguimiento clínico y tratamiento individualizado.
-                </p>
-                <p class="text-gray-600 leading-relaxed mb-4">
-                    Planteamos los casos complejos en juntas médicas y quirúrgicas para definir el mejor abordaje,
-                    integrando un equipo multidisciplinario según las necesidades de cada paciente.
-                </p>
-                <div class="mt-6">
-                    <h4 class="font-semibold text-gray-700 mb-2">📍 Encuéntranos en:</h4>
-                    <p class="text-gray-600 text-sm">
-                        City Médica Torre de Especialistas, carrera 55a #35-251<br>
-                        Rionegro, Antioquia - Consultorio 409 Torre 2.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Logo + botón -->
-            <div class="flex flex-col items-center justify-center">
-                <img src="assets/logo.png" alt="Logo Especialistas" class="w-60 mb-6" />
-                <a href="https://maps.google.com" target="_blank"
-                    class="inline-flex items-center bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-3 rounded-full shadow transition">
-                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M17.657 16.657L13.414 12l4.243-4.243M6 12h12" />
-                    </svg>
-                    Ver en Google Maps
-                </a>
-            </div>
+      <div
+        class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center"
+      >
+        <!-- Texto -->
+        <div>
+          <h3 class="text-2xl font-bold text-gray-800 mb-4">¿Quiénes somos?</h3>
+          <p class="text-gray-600 leading-relaxed mb-4">
+            Somos un grupo de médicos y especialistas en oftalmología,
+            otorrinolaringología y audiología con un enfoque en el cuidado y
+            tratamiento de las diferentes patologías que afectan los órganos de
+            los sentidos.
+          </p>
+          <p class="text-gray-600 leading-relaxed mb-4">
+            Buscamos garantizar a todos nuestros pacientes la integralidad y
+            continuidad en la atención, con un enfoque humano, seguimiento
+            clínico y tratamiento individualizado.
+          </p>
+          <p class="text-gray-600 leading-relaxed mb-4">
+            Planteamos los casos complejos en juntas médicas y quirúrgicas para
+            definir el mejor abordaje, integrando un equipo multidisciplinario
+            según las necesidades de cada paciente.
+          </p>
+          <div class="mt-6">
+            <h4 class="font-semibold text-gray-700 mb-2">
+              📍 Encuéntranos en:
+            </h4>
+            <p class="text-gray-600 text-sm">
+              City Médica Torre de Especialistas, carrera 55a #35-251<br />
+              Rionegro, Antioquia - Consultorio 409 Torre 2.
+            </p>
+          </div>
         </div>
+
+        <!-- Logo + botón -->
+        <div class="flex flex-col items-center justify-center">
+          <img
+            src="assets/logo.png"
+            alt="Logo Especialistas"
+            class="w-60 mb-6"
+          />
+          <a
+            href="https://maps.google.com"
+            target="_blank"
+            class="inline-flex items-center bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-3 rounded-full shadow transition"
+          >
+            <svg
+              class="w-5 h-5 mr-2"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.657 16.657L13.414 12l4.243-4.243M6 12h12"
+              />
+            </svg>
+            Ver en Google Maps
+          </a>
+        </div>
+      </div>
     </section>
-
-
-
 
     <footer class="bg-[#eaf4f9] text-gray-800 pt-16 pb-6 px-6">
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10">
@@ -362,17 +388,5 @@
         Todos los derechos reservados © CMEO Especialistas - 2025
       </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
+  </body>
 </html>
