--- a/index.html
+++ b/index.html
@@ -370,169 +370,79 @@
       </div>
     </section>
 
-    <section class="py-20 bg-white text-center px-6">
-      <h4 class="text-lg text-gray-500 mb-2">Resultados rinoplastia</h4>
-      <h2 class="text-3xl font-bold text-gray-900 mb-8">
-        Galería antes y después
-      </h2>
+<section class="bg-gray-50 py-20 px-6">
+  <div class="max-w-3xl mx-auto text-center">
+    <h2 class="text-3xl font-bold text-gray-800 mb-4">
+      Certificaciones profesionales
+    </h2>
+    <p class="text-gray-600 text-lg mb-10">
+      Nuestros especialistas cuentan con avales oficiales que respaldan su
+      formación y experiencia.
+    </p>
 
-      <div class="flex flex-wrap justify-center gap-8">
-        <!-- Comparador -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
+      <!-- Card 1 -->
+      <div
+        class="group bg-white rounded-xl shadow-md hover:shadow-lg transition-shadow duration-300 p-3 flex flex-col items-center text-center hover:-translate-y-1 transform"
+      >
         <div
-          class="relative w-[300px] h-[400px] rounded-2xl overflow-hidden shadow-xl group bg-gray-200"
+          class="w-10 h-10 rounded-full bg-green-100 flex items-center justify-center mb-2"
         >
-          <!-- Imagen "Antes" (base) -->
-          <img
-            src="assets/rino-001_01.jpg"
-            class="absolute inset-0 w-full h-full object-cover z-0 pointer-events-none"
-          />
-
-          <!-- Imagen "Después" (recortada dinámicamente) -->
-          <div
-            class="absolute inset-0 z-10 overflow-hidden pointer-events-none"
+          <svg
+            class="w-5 h-5 text-green-600"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            viewBox="0 0 24 24"
           >
-            <img
-              src="assets/rino-001_02.jpg"
-              class="w-full h-full object-cover clip-target"
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9 12l2 2l4 -4m1 -5H7a2 2 0 0 0 -2 2v14l7 -3l7 3V5a2 2 0 0 0 -2 -2z"
             />
-          </div>
-
-          <!-- Línea y círculo del slider -->
-          <div
-            class="slider-line absolute top-0 left-1/2 w-1 h-full bg-white z-20 pointer-events-none"
-          ></div>
-          <div
-            class="slider-handle absolute top-1/2 left-1/2 w-8 h-8 bg-white border-2 border-gray-400 rounded-full z-30 transform -translate-x-1/2 -translate-y-1/2 cursor-ew-resize shadow-md"
-          ></div>
+          </svg>
         </div>
-
-        <div
-          class="relative w-[300px] h-[400px] rounded-2xl overflow-hidden shadow-xl group bg-gray-200"
-        >
-          <!-- Imagen "Antes" (base) -->
-          <img
-            src="assets/rino-002_01.jpg"
-            class="absolute inset-0 w-full h-full object-cover z-0 pointer-events-none"
-          />
-
-          <!-- Imagen "Después" (recortada dinámicamente) -->
-          <div
-            class="absolute inset-0 z-10 overflow-hidden pointer-events-none"
-          >
-            <img
-              src="assets/rino-002_02.jpg"
-              class="w-full h-full object-cover clip-target"
-            />
-          </div>
-
-          <!-- Línea y círculo del slider -->
-          <div
-            class="slider-line absolute top-0 left-1/2 w-1 h-full bg-white z-20 pointer-events-none"
-          ></div>
-          <div
-            class="slider-handle absolute top-1/2 left-1/2 w-8 h-8 bg-white border-2 border-gray-400 rounded-full z-30 transform -translate-x-1/2 -translate-y-1/2 cursor-ew-resize shadow-md"
-          ></div>
-        </div>
-
-        <div
-          class="relative w-[300px] h-[400px] rounded-2xl overflow-hidden shadow-xl group bg-gray-200"
-        >
-          <!-- Imagen "Antes" (base) -->
-          <img
-            src="assets/rino-003_02.jpg"
-            class="absolute inset-0 w-full h-full object-cover z-0 pointer-events-none"
-          />
-
-          <!-- Imagen "Después" (recortada dinámicamente) -->
-          <div
-            class="absolute inset-0 z-10 overflow-hidden pointer-events-none"
-          >
-            <img
-              src="assets/rino-003_01.jpg"
-              class="w-full h-full object-cover clip-target"
-            />
-          </div>
-
-          <!-- Línea y círculo del slider -->
-          <div
-            class="slider-line absolute top-0 left-1/2 w-1 h-full bg-white z-20 pointer-events-none"
-          ></div>
-          <div
-            class="slider-handle absolute top-1/2 left-1/2 w-8 h-8 bg-white border-2 border-gray-400 rounded-full z-30 transform -translate-x-1/2 -translate-y-1/2 cursor-ew-resize shadow-md"
-          ></div>
-        </div>
-
-        <div
-          class="relative w-[300px] h-[400px] rounded-2xl overflow-hidden shadow-xl group bg-gray-200"
-        >
-          <!-- Imagen "Antes" (base) -->
-          <img
-            src="assets/rino-004_02.jpg"
-            class="absolute inset-0 w-full h-full object-cover z-0 pointer-events-none"
-          />
-
-          <!-- Imagen "Después" (recortada dinámicamente) -->
-          <div
-            class="absolute inset-0 z-10 overflow-hidden pointer-events-none"
-          >
-            <img
-              src="assets/rino-004_01.jpg"
-              class="w-full h-full object-cover clip-target"
-            />
-          </div>
-
-          <!-- Línea y círculo del slider -->
-          <div
-            class="slider-line absolute top-0 left-1/2 w-1 h-full bg-white z-20 pointer-events-none"
-          ></div>
-          <div
-            class="slider-handle absolute top-1/2 left-1/2 w-8 h-8 bg-white border-2 border-gray-400 rounded-full z-30 transform -translate-x-1/2 -translate-y-1/2 cursor-ew-resize shadow-md"
-          ></div>
-        </div>
+        <img
+          src="assets/certificado-otorrino.png"
+          alt="Certificado Otorrino"
+          class="rounded-md shadow-sm w-3/4 h-auto mb-2"
+        />
+        <h3 class="text-base font-medium text-gray-800">
+          Otorrinolaringología
+        </h3>
       </div>
-      <style>
-        .clip-target {
-          clip-path: inset(0 50% 0 0);
-          /* muestra mitad izquierda inicialmente */
-          transition: clip-path 0s;
-        }
-      </style>
-      <script>
-        document.querySelectorAll(".group").forEach((container) => {
-          const clipImage = container.querySelector(".clip-target");
-          const handle = container.querySelector(".slider-handle");
-          const line = container.querySelector(".slider-line");
 
-          let isDragging = false;
-
-          const move = (clientX, rect) => {
-            let x = clientX - rect.left;
-            x = Math.max(0, Math.min(x, rect.width));
-            const percentage = (x / rect.width) * 100;
-            clipImage.style.clipPath = `inset(0 ${100 - percentage}% 0 0)`;
-            handle.style.left = `${x}px`;
-            line.style.left = `${x}px`;
-          };
-
-          handle.addEventListener("mousedown", () => (isDragging = true));
-          window.addEventListener("mouseup", () => (isDragging = false));
-          container.addEventListener("mousemove", (e) => {
-            if (!isDragging) return;
-            const rect = container.getBoundingClientRect();
-            move(e.clientX, rect);
-          });
-
-          // Touch support
-          handle.addEventListener("touchstart", () => (isDragging = true));
-          window.addEventListener("touchend", () => (isDragging = false));
-          container.addEventListener("touchmove", (e) => {
-            if (!isDragging) return;
-            const rect = container.getBoundingClientRect();
-            move(e.touches[0].clientX, rect);
-          });
-        });
-      </script>
-    </section>
+      <!-- Card 2 -->
+      <div
+        class="group bg-white rounded-xl shadow-md hover:shadow-lg transition-shadow duration-300 p-3 flex flex-col items-center text-center hover:-translate-y-1 transform"
+      >
+        <div
+          class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center mb-2"
+        >
+          <svg
+            class="w-5 h-5 text-teal-600"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9 12l2 2l4 -4m1 -5H7a2 2 0 0 0 -2 2v14l7 -3l7 3V5a2 2 0 0 0 -2 -2z"
+            />
+          </svg>
+        </div>
+        <img
+          src="assets/certificado-oftalmo.png"
+          alt="Certificado Oftalmología"
+          class="rounded-md shadow-sm w-3/4 h-auto mb-2"
+        />
+        <h3 class="text-base font-medium text-gray-800">Oftalmología</h3>
+      </div>
+    </div>
+  </div>
+</section>
 
     <section class="bg-gray-50 py-20 px-6">
       <div class="max-w-6xl mx-auto text-center">
@@ -544,16 +454,16 @@
           formación y experiencia.
         </p>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
           <!-- Card 1 -->
           <div
-            class="group bg-white rounded-2xl shadow-md hover:shadow-xl transition-shadow duration-300 p-6 flex flex-col items-center text-center hover:-translate-y-1 transform"
+            class="group bg-white rounded-2xl shadow-md hover:shadow-xl transition-shadow duration-300 p-4 flex flex-col items-center text-center hover:-translate-y-1 transform"
           >
             <div
-              class="w-16 h-16 rounded-full bg-green-100 flex items-center justify-center mb-4"
+              class="w-12 h-12 rounded-full bg-green-100 flex items-center justify-center mb-3"
             >
               <svg
-                class="w-8 h-8 text-green-600"
+                class="w-6 h-6 text-green-600"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
@@ -569,22 +479,22 @@
             <img
               src="assets/certificado-otorrino.png"
               alt="Certificado Otorrino"
-              class="rounded-lg shadow-sm w-full h-auto mb-4"
+              class="rounded-lg shadow-sm w-4/5 h-auto mb-3"
             />
-            <h3 class="text-xl font-semibold text-gray-800">
+            <h3 class="text-lg font-semibold text-gray-800">
               Otorrinolaringología
             </h3>
           </div>
 
-          <!-- Card 3 -->
+          <!-- Card 2 -->
           <div
-            class="group bg-white rounded-2xl shadow-md hover:shadow-xl transition-shadow duration-300 p-6 flex flex-col items-center text-center hover:-translate-y-1 transform"
+            class="group bg-white rounded-2xl shadow-md hover:shadow-xl transition-shadow duration-300 p-4 flex flex-col items-center text-center hover:-translate-y-1 transform"
           >
             <div
-              class="w-16 h-16 rounded-full bg-teal-100 flex items-center justify-center mb-4"
+              class="w-12 h-12 rounded-full bg-teal-100 flex items-center justify-center mb-3"
             >
               <svg
-                class="w-8 h-8 text-teal-600"
+                class="w-6 h-6 text-teal-600"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
@@ -600,9 +510,9 @@
             <img
               src="assets/certificado-oftalmo.png"
               alt="Certificado Oftalmología"
-              class="rounded-lg shadow-sm w-full h-auto mb-4"
+              class="rounded-lg shadow-sm w-4/5 h-auto mb-3"
             />
-            <h3 class="text-xl font-semibold text-gray-800">Oftalmología</h3>
+            <h3 class="text-lg font-semibold text-gray-800">Oftalmología</h3>
           </div>
         </div>
       </div>
